airflow/logs/dag_id=ETL_psql_redshift_dag/run_id=manual__2023-06-14T12:39:30.349993+00:00/task_id=Load_to_psql/attempt=1.log
[2023-06-14T12:40:14.903+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: ETL_psql_redshift_dag.Load_to_psql manual__2023-06-14T12:39:30.349993+00:00 [queued]>
[2023-06-14T12:40:14.909+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: ETL_psql_redshift_dag.Load_to_psql manual__2023-06-14T12:39:30.349993+00:00 [queued]>
[2023-06-14T12:40:14.910+0000] {taskinstance.py:1279} INFO - 
--------------------------------------------------------------------------------
[2023-06-14T12:40:14.910+0000] {taskinstance.py:1280} INFO - Starting attempt 1 of 3
[2023-06-14T12:40:14.910+0000] {taskinstance.py:1281} INFO - 
--------------------------------------------------------------------------------
[2023-06-14T12:40:14.919+0000] {taskinstance.py:1300} INFO - Executing <Task(PythonOperator): Load_to_psql> on 2023-06-14 12:39:30.349993+00:00
[2023-06-14T12:40:14.924+0000] {standard_task_runner.py:55} INFO - Started process 279 to run task
[2023-06-14T12:40:14.928+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'ETL_psql_redshift_dag', 'Load_to_psql', 'manual__2023-06-14T12:39:30.349993+00:00', '--job-id', '9', '--raw', '--subdir', 'DAGS_FOLDER/dags_setup.py', '--cfg-path', '/tmp/tmpes4ls5g6']
[2023-06-14T12:40:14.930+0000] {standard_task_runner.py:83} INFO - Job 9: Subtask Load_to_psql
[2023-06-14T12:40:14.984+0000] {task_command.py:388} INFO - Running <TaskInstance: ETL_psql_redshift_dag.Load_to_psql manual__2023-06-14T12:39:30.349993+00:00 [running]> on host 3d4df578486c
[2023-06-14T12:40:15.029+0000] {taskinstance.py:1509} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=vupham
AIRFLOW_CTX_DAG_ID=ETL_psql_redshift_dag
AIRFLOW_CTX_TASK_ID=Load_to_psql
AIRFLOW_CTX_EXECUTION_DATE=2023-06-14T12:39:30.349993+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-06-14T12:39:30.349993+00:00
[2023-06-14T12:40:29.751+0000] {logging_mixin.py:137} INFO - Successfully insert data to table Sale_schema.locations
[2023-06-14T12:40:49.881+0000] {logging_mixin.py:137} INFO - Successfully insert data to table Sale_schema.customers
[2023-06-14T12:42:37.116+0000] {logging_mixin.py:137} INFO - Successfully insert data to table Sale_schema.products
[2023-06-14T12:43:47.348+0000] {logging_mixin.py:137} INFO - Successfully insert data to table Sale_schema.sales
[2023-06-14T12:43:48.699+0000] {taskinstance.py:1768} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 192, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/ETL_psql/Load/Load_psql.py", line 53, in Load_schema
    Load_table(f"Sale_schema.{table}", df, cur);
  File "/opt/airflow/dags/ETL_psql/Load/Load_psql.py", line 23, in Load_table
    cur.executemany(query, records);
psycopg2.errors.SyntaxError: syntax error at or near ":"
LINE 2: ...        INSERT INTO Sale_schema.shipments (Unnamed: 0, Shipm...
                                                             ^

[2023-06-14T12:43:48.716+0000] {taskinstance.py:1323} INFO - Marking task as UP_FOR_RETRY. dag_id=ETL_psql_redshift_dag, task_id=Load_to_psql, execution_date=20230614T123930, start_date=20230614T124014, end_date=20230614T124348
[2023-06-14T12:43:48.733+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 9 for task Load_to_psql (syntax error at or near ":"
LINE 2: ...        INSERT INTO Sale_schema.shipments (Unnamed: 0, Shipm...
                                                             ^
; 279)
[2023-06-14T12:43:48.814+0000] {local_task_job.py:208} INFO - Task exited with return code 1
[2023-06-14T12:43:48.838+0000] {taskinstance.py:2578} INFO - 0 downstream tasks scheduled from follow-on schedule check
